# solana_api_server

./: Cargo.toml  Dockerfile  Procfile  README.md  railway.toml  test_endpoints.sh
src/: api_response.rs  lib.rs  main.rs
src/endpoints/: keypair.rs  message.rs  mod.rs  token.rs  transfer.rs
tests/: integration_test.rs
