[package]
name = "solana_api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "1.17"
spl-token = "3.5"
bs58 = "0.4"
base64 = "0.21"
ed25519-dalek = "1.0"
bincode = "1.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
